--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,32 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Memory Game</title>
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-	<h1>Memory Game</h1>
 
-	<div class="row">
-		<div class="col-lg-3 col-md-6">
-			<img src="img/back.jpg">
-		</div>
-		<div class="col-lg-3 col-md-6">
-			<img src="img/back.jpg">
-		</div>
-		<div class="col-lg-3 col-md-6">
-			<img src="img/back.jpg">
-		</div>
-		<div class="col-lg-3 col-md-6">
-			<img src="img/back.jpg">
-		</div>
-		<div class="col-lg-3 col-md-6">
-			<img src="img/back.jpg">
-		</div>
-		<div class="col-lg-3 col-md-6">
-			<img src="img/back.jpg">
-		</div>
-	</div>
+<head>
+  <title>Memory Game</title>
+  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <link rel="stylesheet" type="text/css" href="css/column.css">
+  <link rel="stylesheet" type="text/css" href="css/memory.css">
+  <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="js/index.js"></script>
+</head>
+
+<body>
+  <div class="row">
+    <div>
+      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span class="label-back">&lt; &frasl; &gt;</span>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span class="label-back">&lt; &frasl; &gt;</span>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span class="label-back">&lt; &frasl; &gt;</span>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span class="label-back">&lt; &frasl; &gt;</span>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span class="label-back">&lt; &frasl; &gt;</span>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span class="label-back">&lt; &frasl; &gt;</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="hidden" id="templates">
+    <div piece="css" class="incomplete item-css col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <div class="item css">
+        <span>CSS</span>
+      </div>
+    </div>
+    <div piece="js" class="incomplete item-js col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <div class="item js">
+        <span>JS</span>
+      </div>
+    </div>
+    <div piece="html" class="incomplete item-html col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <div class="item html">
+        <span>HTML</span>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
