--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,70 +6,28 @@
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/column.css">
   <link rel="stylesheet" type="text/css" href="css/memory.css">
+
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/array-extension.js"></script>
 </head>
 
 <body>
   <div class="row">
-    <div>
-      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="item back">
-          <span class="label-back">&lt; &frasl; &gt;</span>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="item back">
-          <span class="label-back">&lt; &frasl; &gt;</span>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="item back">
-          <span class="label-back">&lt; &frasl; &gt;</span>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="item back">
-          <span class="label-back">&lt; &frasl; &gt;</span>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="item back">
-          <span class="label-back">&lt; &frasl; &gt;</span>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="item back">
-          <span class="label-back">&lt; &frasl; &gt;</span>
-        </div>
-      </div>
-    </div>
+    <!-- Insert pieces here. -->
   </div>
 
   <div class="hidden" id="templates">
-    <div piece="css" class="incomplete item-css col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-      <div class="item css">
-        <span>CSS</span>
+    <div>
+      <div class="hidden piece-front col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item">
+          <span></span>
+        </div>
       </div>
-    </div>
-    <div piece="js" class="incomplete item-js col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-      <div class="item js">
-        <span>JS</span>
-      </div>
-    </div>
-    <div piece="html" class="incomplete item-html col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-      <div class="item html">
-        <span>HTML</span>
+      <div class="piece-back col-ex-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="item back">
+          <span></span>
+        </div>
       </div>
     </div>
   </div>
